--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-spring.datasource.username=root
-spring.datasource.password=fidghk123
+spring.datasource.username=
+spring.datasource.password=
 
 spring.datasource.url=jdbc:mysql://localhost:3306/restapi_test?serverTimezone=Asia/Seoul
